<resources>
    <string name="app_name">LynnGroceryStore</string>

    <!--Login labels-->
    <string name="user_name">User Name</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="or_login_with">Or login with</string>
    <string name="donot_have_any_account">Don\'t have any account ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="processing_msg">Processing…</string>

    <!-- SignUp labels-->
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_email">Email</string>

    <string name="cb_tnc_msg">
        <![CDATA[
        Accept <a href=#><b>Terms of Service and Privacy Agreement.<b></a>
        ]]>
    </string>
    <string name="already_have_an_account">Already have an account?</string>

    <!-- OTP labels-->
    <string name="otp_msg">An OTP has been sent to your registered mobile number and email id.</string>
    <string name="verification_code">Verfication Code</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="submit">Submit</string>



    <!--Forgot Screen-->
    <string name="forgot_your_password">Forgot Your \n Password ?</string>
    <string name="reset_your_password">Reset Your \nPassword ?</string>
    <string name="type_your_email">Type Your Email</string>
    <string name="please_enter_your_emailid">Please enter your register email id below \n and we\'ll send you 4 digit OTP number </string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="please_enter_newpassword">Please enter your new password.</string>

    <!--Home Screen-->
    <string name="your_location">Your Location</string>
    <string name="search_product_here">Search product here...
    </string>
</resources>
