<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    android:focusableInTouchMode="true"
    android:paddingBottom="16dp">

    <include
        android:id="@+id/pass_toolbar"
        layout="@layout/layout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"></include>

    <LinearLayout
        android:id="@+id/forgot_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pass_toolbar"
        app:layout_constraintVertical_bias="0.173">


        <ImageView
            android:id="@+id/iv_forgot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/forgot_key" />

        <app.lynngrocerystore.util.TextviewReg
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:lineSpacingExtra="3dp"
            android:text="@string/reset_your_password"
            android:textColor="@color/colorWhite"
            android:textSize="14pt" />

        <app.lynngrocerystore.util.TextviewReg
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:lineSpacingExtra="3dp"
            android:text="@string/please_enter_newpassword"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/password_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/forgot_linear"
        android:layout_marginTop="8dp"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16dp"
            android:background="@drawable/forgot_bg"
            android:elevation="4dp"
            android:hint="@string/new_password"
            android:padding="14dp"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">


        </android.support.design.widget.TextInputEditText>

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/forgot_bg"
            android:elevation="4dp"
            android:hint="@string/confirm_password"
            android:padding="14dp"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/new_password"></android.support.design.widget.TextInputEditText>
    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_send"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="14dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/send_btn"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="SEND"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_linear"
        app:layout_constraintVertical_bias="0.909" />
</android.support.constraint.ConstraintLayout>