<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:fitsSystemWindows="true"
    android:overScrollMode="always"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/username"
                android:drawablePadding="16dp"
                android:gravity="start|center_vertical"
                android:hint="@string/user_name"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:nextFocusDown="@id/input_password"
                android:textColor="@color/green"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorDarkGrey">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/password"
                android:drawableLeft="@drawable/password"
                android:drawablePadding="16dp"
                android:gravity="start|center_vertical"
                android:hint="Password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingTop="0dp"
                android:singleLine="true"
                android:textColor="@color/green"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>

        <app.lynngrocerystore.util.TextviewReg
            android:id="@+id/forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:text="@string/forgot_password"
            android:textColor="@color/colorTextColor"
            android:textSize="14sp" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/login_button"
            android:fontFamily="@font/roboto_regular"
            android:padding="16dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_weight="1.1"
                android:background="@color/light_grey"></View>

            <app.lynngrocerystore.util.TextviewReg
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:gravity="center"
                android:text="@string/or_login_with"
                android:textColor="@color/colorGrey"
                android:textSize="14sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1.1"
                android:background="@color/light_grey"></View>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:id="@+id/img_facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/facebook" />

            <ImageView
                android:id="@+id/img_twitter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/twitter" />
        </LinearLayout>

        <app.lynngrocerystore.util.TextviewReg
            android:id="@+id/tv_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="@string/donot_have_any_account"
            android:textColor="@color/colorDarkGrey"
            android:textSize="14sp" />

    </LinearLayout>


</ScrollView>