<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_background"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="16sp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableEnd="@drawable/username"
                android:drawableRight="@drawable/username"
                android:gravity="start|center_vertical"
                android:hint="@string/first_name"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:nextFocusDown="@id/input_password"
                android:paddingRight="10dp"
                android:textColor="@color/green"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawableEnd="@drawable/username"
                android:drawableRight="@drawable/username"
                android:drawablePadding="10dp"
                android:gravity="start|center_vertical"
                android:hint="@string/last_name"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:nextFocusDown="@id/input_password"
                android:paddingRight="10dp"
                android:textColor="@color/green"
                android:textSize="16sp"></android.support.design.widget.TextInputEditText>

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <app.lynngrocerystore.lynn.ui.custom.country.CountryCodePicker
                android:id="@+id/country_code_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:textColor="@color/green"
                app:contentColor="@color/colorGrey"
                app:defaultNameCode="US"
                app:hideNameCode="true"
                app:showFlag="false" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:digits="0123456789"
                    android:drawableEnd="@drawable/ic_phone"
                    android:drawableRight="@drawable/ic_phone"
                    android:gravity="start|center_vertical"
                    android:hint="@string/hint_phone"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:nextFocusDown="@+id/et_email"
                    android:paddingRight="10dp"
                    android:textColor="@color/green"
                    android:textSize="16sp" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawableEnd="@drawable/ic_email"
                android:drawableRight="@drawable/ic_email"
                android:gravity="start|center_vertical"
                android:hint="@string/hint_email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:nextFocusDown="@+id/et_password"
                android:paddingRight="10dp"
                android:textColor="@color/green"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorGrey">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="Password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/green"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:id="@+id/cb_tnc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:linksClickable="true"
            android:text="@string/cb_tnc_msg"
            android:textColor="@color/colorGrey"
            android:textColorLink="@color/colorTextColor"
            android:textSize="12sp" />


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/login_button"
            android:padding="16dp"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:visibility="invisible"
            tools:visibility="visible" />

        <app.lynngrocerystore.util.TextviewReg
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Already have an account? Login"
            android:textColor="@color/colorBlack"
            android:textSize="14sp" />
    </LinearLayout>
</ScrollView>